Run CI on Java 17 (#2417)
Co-authored-by: Rafael Winterhalter <rafael.wth@gmail.com>